[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Aerofoil_thickness_container.gd" type="Script" id=1]

[node name="settings_menu" type="Node2D"]

[node name="Aerofoil_thickness_container" type="VBoxContainer" parent="."]
margin_left = 111.0
margin_top = 159.0
margin_right = 409.0
margin_bottom = 211.0
alignment = 1
script = ExtResource( 1 )

[node name="label_title" type="Label" parent="Aerofoil_thickness_container"]
margin_right = 298.0
margin_bottom = 14.0
text = "Aerofoil outline thickness"
align = 1

[node name="HSlider" type="HSlider" parent="Aerofoil_thickness_container"]
margin_top = 18.0
margin_right = 298.0
margin_bottom = 34.0
min_value = 1.0
max_value = 18.0
step = 0.5
value = 10.0
ticks_on_borders = true

[node name="color" type="Label" parent="Aerofoil_thickness_container"]
margin_top = 38.0
margin_right = 298.0
margin_bottom = 52.0
text = "Color"
align = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Aerofoil_thickness_container"]
margin_top = 56.0
margin_right = 298.0
margin_bottom = 76.0
color = Color( 1, 1, 1, 1 )

[node name="label_preview" type="Label" parent="Aerofoil_thickness_container"]
margin_top = 80.0
margin_right = 298.0
margin_bottom = 94.0
text = "Preview :"
align = 1

[node name="Line2D" type="Line2D" parent="Aerofoil_thickness_container"]
position = Vector2( 6.44308, -21 )
points = PoolVector2Array( 26.1049, 260.477, 0.359108, 232.336, -12.8131, 186.832, 6.94523, 144.321, 118.311, 127.557, 209.918, 146.716, 271.588, 176.653, 282.964, 242.514, 157.229, 281.432, 26.1049, 260.477 )
texture_mode = 33099744

[node name="back_button" type="Button" parent="Aerofoil_thickness_container"]
margin_top = 98.0
margin_right = 298.0
margin_bottom = 118.0
text = "Back"
[connection signal="value_changed" from="Aerofoil_thickness_container/HSlider" to="Aerofoil_thickness_container" method="_on_HSlider_value_changed"]
[connection signal="color_changed" from="Aerofoil_thickness_container/ColorPickerButton" to="Aerofoil_thickness_container" method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="Aerofoil_thickness_container/back_button" to="Aerofoil_thickness_container" method="_on_back_button_pressed"]
